[package]
name = "rust-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0.152"
serde_json = "1.0.93"
diesel = { version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15.6"
maud = "0.24.0"